--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -85,13 +85,13 @@ In order to obtain precise fundamental physical parameters like size and shape, 
 
 We present in this paper new numerical integration of the orbits of the 8 major irregular satellites of Jupiter (Himalia, Elara, Pasiphae, Lysithea, Carme, Ananke, Sinope and Leda) for predict stellar occultations. This is a specific short-time ephemeris using only the positions obtained by \cite{GomesJunior2015}. \cite{GomesJunior2015} obtained 6523 suitable positions for 18 irregular satellites between 1992 and 2014 with an estimated error in the positions of about 60 to 80 mas. For some satellites the number of positions obtained is comparable to the number used in the numerical integration of orbits by the JPL \citep{Jacobson2012}. They pointed out that the ephemeris of the irregular satellites have systematic errors that may reach 200 mas for some satellites. For an object at the distance of Jupiter, this represents an error langer than 700 km in the shadow path of an occultation.
 
-For Phoebe, we updated the ephemeris of \cite{Desmars2013} using the observations of \cite{GomesJunior2015}, observations from Minor Planet Center and observations from Flagstaff. For Nereid and Triton we used the most recent ephemeris available.
+For Phoebe, we updated the ephemeris of \cite{Desmars2013} using the observations of \cite{GomesJunior2015}, observations from Minor Planet Center and observations from Flagstaff. %For Nereid and Triton we used the most recent ephemeris available.
 
-Also, with new and precise ephemeris, we present stellar occultation predictions for these 11 objects up to 2020. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects.
+Also, with new and precise ephemeris, we present stellar occultation predictions for these 11 objects up to 2020. Phoebe, being the most studied object with a good measured size, can be used to calibrate and evaluate the technique for similar objects. Triton, although it is not an actual irregular satellite, was also include in the list because of its atmosphere which has a complicated and extreme seasonal cycle \citep{McKinnon2007, Elliot_2000}.
  
-Triton is an uncommon satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit size is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded from the irregular satellites' class, but still studied together by many authors \citep{Sheppard2005, Jewitt2007}. Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. However, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main motivation to study Triton by stellar occultations is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007, Elliot_2000}. For all these reasons, Triton was also included as a target in this work.
+%Triton is an uncommon satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit size is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded from the irregular satellites' class, but still studied together by many authors \citep{Sheppard2005, Jewitt2007}. Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. However, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere. The main motivation to study Triton by stellar occultations is to understand the evolution of its atmosphere due to Triton's complicated and extreme seasonal cycle \citep{McKinnon2007, Elliot_2000}. For all these reasons, Triton was also included as a target in this work.
 
-Excluding Triton \citep{Olkin1997, Elliot_2000}, no observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their relatively closer distances as compared to TNOs and Centaurs, and considering the current precision of their ephemeris and of star positions, we can now reliably predict the exact location and instant where the shadow of the occultation will cross the Earth. For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, if the accumulated error (2 sigma or 95\% confidence level) of ephemeris and star position be around 70 mas, we have a probability of about 30\% of observing a stellar occultation, which is quite satisfactory today (see discussion in section \ref{Sec: discussion}).
+Excluding Triton \citep{Olkin1997, Elliot_2000}, no observation of a stellar occultation by an irregular satellite was published up to date. Since their estimated sizes are very small (see Table \ref{Tab: satellite-diameter}), this may have discouraged earlier tries. But, in fact, given their relatively closer distances as compared to TNOs and Centaurs, and considering the current precision of their ephemeris and of star positions, we can now reliably predict the exact location and instant where the shadow of the occultation will cross the Earth. %For instance, Himalia, supposedly the largest irregular satellite of Jupiter has an estimated size of 150 km \citep{Porco2003}, which is equivalent to an apparent size of about 40 mas (milliarcseconds). Thus, in this case, if the accumulated error (2 sigma or 95\% confidence level) of ephemeris and star position be around 70 mas, we have a probability of about 30\% of observing a stellar occultation, which is quite satisfactory today (see discussion in section \ref{Sec: discussion}).
 
 \begin{table}
 \caption{\label{Tab: satellite-diameter} Estimated diameter of the satellites and correspondent apparent diameter}
@@ -124,7 +124,7 @@ $^{c}${From Voyager-2 observations.}
 \par
 \end{table}
 
-Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. In contrast to TNOs, the irregular satellites have much better ephemeris because the orbits of their host planets are better  known, their observational time span is much wider and covers many orbital periods. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
+%Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. In contrast to TNOs, the irregular satellites have much better ephemeris because the orbits of their host planets are better  known, their observational time span is much wider and covers many orbital periods. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
 
 In section \ref{Sec: integration} we show the building of the new ephemeris. In section \ref{Sec: predictions}, we present the predictions of the stellar occultations by irregular satellites and how they were made. Some tests made to check the accuracy of the predictions are presented in section \ref{Sec: testes} and the final discussion is presented in section \ref{Sec: discussion}.
 
@@ -233,7 +233,9 @@ In Fig. \ref{Fig:eph-Phoebe} we compare our ephemeris (PH15) with the SAT375 JPL
 
 \subsection{Triton's and Nereid's ephemeris}
 
-For Triton, we used the most recent ephemeris published by \cite{Emelyanov2015}. In Fig. \ref{Fig:eph-Triton} we compare it with the ephemeris published in \cite{Zhang2014} and the NEP081 JPL ephemeris \citep{Jacobson2009}. The offsets between the three ephemeris are smaller than 15 mas for the period 2015-2018. This value is much smaller than the apparent size of Triton (124 mas, see Table \ref{Tab: satellite-diameter}), which indicates a good probability of observing an event by this object.
+Triton is an uncommon satellite. Its orbit is retrograde and inclined, but quasi-circular and very close to the planet compared to the irregular ones. Because Triton's orbit size is very small and its precession is not dominated by Solar perturbations, Triton is frequently excluded from the irregular satellites' class, but still studied together by many authors \citep{Sheppard2005, Jewitt2007}. Similarly to the irregular satellites, Triton was probably captured in the early solar system and may have the same origin as the TNOs \citep{Agnor2006}. However, Triton is bigger than the irregular satellites by an order of magnitude and has an atmosphere.
+
+For this satellite, we used the most recent ephemeris published by \cite{Emelyanov2015} which is based on more observations than previous ephemeris and covers 4 years more than the ephemeris of \cite{Jacobson2009}. In Fig. \ref{Fig:eph-Triton} we compare it with the ephemeris published in \cite{Zhang2014} and the NEP081 JPL ephemeris \citep{Jacobson2009}. The offsets between the three ephemeris are smaller than 15 mas for the period 2015-2018. This value is much smaller than the apparent size of Triton (124 mas, see Table \ref{Tab: satellite-diameter}), which indicates a good probability of observing an event by this object.
 
 \begin{figure*}
 \begin{centering}
@@ -334,6 +336,8 @@ The first preliminary catalogue version of the ESA astrometry satellite GAIA \ci
 
 
 \subsection{Prediction test} \label{Sec: testes}
+
+Since 2009 many successful observations of stellar occultations by TNOs have been reported in the literature \citep{Elliot2010, Sicardy2011, Ortiz2012, Braga-Ribas2013}, the main disadvantages in their prediction being large heliocentric distances and ephemeris error, facts somewhat compensated for the larger diameters involved. In contrast to TNOs, the irregular satellites have much better ephemeris because the orbits of their host planets are better  known, their observational time span is much wider and covers many orbital periods. Moreover, the irregular satellites are much closer to Earth which implies in a much smaller shadow path error in kilometers. These advantages may be somewhat balanced by the smaller sizes estimated for the irregular satellites.Thus, in comparison, the chances for a successful observation of an stellar occultation by an irregular satellite should be considered at least also as good as those by TNOs.
 
 Observing a stellar occultation demands a great effort. And, in our case, the shadow covers a very restricted area on Earth because of the size of the irregular satellites. Since no stellar occultation by an irregular satellite was observed up to date, with the exception of Triton, and since we want to be sure that we can start observational campaigns with reasonable chances of success, we tested an occultation prediction for a large target, to assess the quality of the prediction.
 
