--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -140,7 +140,8 @@ The last observations used to develop JPL current ephemeris of the irregular sat
 
 Our numerical model describes the dynamical evolution of the irregular satellites of Jupiter in a jovicentric reference frame. The satellites are submitted to the influence of the Sun and the rest of the solar system, as well as that of the Galilean satellites and the first harmonics of Jupiter's gravity field. The axes of the reference frame are those of the ICRS. 
 
-We use the following notations: \begin{itemize}
+We use the following notations:
+\begin{itemize}
 \item $i$ and $l$ one of the irregular satellites of Jupiter
 \item $J$ Jupiter 
 \item $j$ another body of the Solar System
